--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -66,26 +66,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "YES\n",
-      "YES\n",
-      "YES\n",
-      "NO\n"
+      "-1\n"
      ]
     }
    ],
    "source": [
     "from collections import deque\n",
     "\n",
+    "def bfs():\n",
+    "    while have_to_visit:\n",
+    "        x, y, cost, pass_wall = have_to_visit.popleft()\n",
+    "        \n",
+    "        if x == N - 1 and y == M - 1:\n",
+    "            return cost\n",
+    "        \n",
+    "        for i in range(4):\n",
+    "            nx = x + dx[i]\n",
+    "            ny = y + dy[i]\n",
+    "            \n",
+    "            if 0 <= nx < N and 0 <= ny < M:\n",
+    "                # 벽을 통과할 때\n",
+    "                if board[nx][ny] == \"1\" and pass_wall == 0 and not visited[nx][ny][1]:\n",
+    "                    visited[nx][ny][1] = True\n",
+    "                    have_to_visit.append((nx, ny, cost + 1, 1))\n",
+    "                # 벽을 통과하지 않았을 때\n",
+    "                elif board[nx][ny] == \"0\" and not visited[nx][ny][pass_wall]:\n",
+    "                    visited[nx][ny][pass_wall] = True\n",
+    "                    have_to_visit.append((nx, ny, cost + 1, pass_wall))\n",
+    "                        \n",
+    "    return -1\n",
+    "\n",
+    "\n",
     "N, M = map(int, input().split())\n",
     "board = [input() for _ in range(N)]\n",
-    "check_map = [[False for _ in range(M)] for _ in range(N)]"
+    "visited = [[[False] * 2 for _ in range(M)] for _ in range(N)]\n",
+    "\n",
+    "dx = [-1, 1, 0, 0]\n",
+    "dy = [0, 0, -1, 1]\n",
+    "\n",
+    "pass_wall = 0\n",
+    "\n",
+    "have_to_visit = deque()\n",
+    "have_to_visit.append((0, 0, 1, pass_wall))\n",
+    "visited[0][0][0] = True\n",
+    "\n",
+    "print(bfs())"
    ]
   },
   {
