--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -66,58 +66,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-1\n"
+      "19\n"
      ]
     }
    ],
    "source": [
     "from collections import deque\n",
     "\n",
-    "def bfs():\n",
+    "def bfs(nums, x, y):\n",
+    "    visited = set()\n",
+    "    have_to_visit = deque()\n",
+    "    max_weight = 0\n",
+    "    \n",
+    "    dx = [-1, 1, 0, 0]\n",
+    "    dy = [0, 0, -1, 1]\n",
+    "    \n",
+    "    visited.add((x, y))\n",
+    "    have_to_visit.append((x, y, nums[x][y], 1, visited))\n",
+    "    \n",
     "    while have_to_visit:\n",
-    "        x, y, cost, pass_wall = have_to_visit.popleft()\n",
+    "        x, y, weight, count, _visited = have_to_visit.popleft()\n",
     "        \n",
-    "        if x == N - 1 and y == M - 1:\n",
-    "            return cost\n",
+    "        if count == 4:\n",
+    "            if weight > max_weight:\n",
+    "                max_weight = weight\n",
+    "            continue\n",
     "        \n",
     "        for i in range(4):\n",
     "            nx = x + dx[i]\n",
     "            ny = y + dy[i]\n",
     "            \n",
-    "            if 0 <= nx < N and 0 <= ny < M:\n",
-    "                # 벽을 통과할 때\n",
-    "                if board[nx][ny] == \"1\" and pass_wall == 0 and not visited[nx][ny][1]:\n",
-    "                    visited[nx][ny][1] = True\n",
-    "                    have_to_visit.append((nx, ny, cost + 1, 1))\n",
-    "                # 벽을 통과하지 않았을 때\n",
-    "                elif board[nx][ny] == \"0\" and not visited[nx][ny][pass_wall]:\n",
-    "                    visited[nx][ny][pass_wall] = True\n",
-    "                    have_to_visit.append((nx, ny, cost + 1, pass_wall))\n",
-    "                        \n",
-    "    return -1\n",
+    "            if 0 <= nx < n and 0 <= ny < m and (nx, ny) not in _visited:\n",
+    "                _visited.add((nx, ny))\n",
+    "                have_to_visit.append((nx, ny, weight + nums[nx][ny], count + 1, _visited))\n",
+    "    \n",
+    "    return max_weight\n",
+    "\n",
+    "def t_boundary(nums, x, y):\n",
+    "    max_weight = 0\n",
+    "        \n",
+    "    dx = [-1, 1, 0, 0]\n",
+    "    dy = [0, 0, -1, 1]\n",
+    "\n",
+    "    for omit in range(4):\n",
+    "        total = nums[x][y]\n",
+    "        for d in range(4):\n",
+    "            if d == omit:\n",
+    "                continue\n",
+    "            nx = x + dx[d]\n",
+    "            ny = y + dy[d]\n",
+    "\n",
+    "            if not (0 <= nx < n and 0 <= ny < m):\n",
+    "                break\n",
+    "            \n",
+    "            total += nums[nx][ny]\n",
+    "            \n",
+    "    if max_weight < total:\n",
+    "        max_weight = total\n",
+    "    \n",
+    "    return max_weight\n",
     "\n",
     "\n",
-    "N, M = map(int, input().split())\n",
-    "board = [input() for _ in range(N)]\n",
-    "visited = [[[False] * 2 for _ in range(M)] for _ in range(N)]\n",
+    "n, m = map(int, input().split())\n",
+    "nums = [list(map(int, input().split())) for _ in range(n)]\n",
     "\n",
-    "dx = [-1, 1, 0, 0]\n",
-    "dy = [0, 0, -1, 1]\n",
+    "max_weight = 0\n",
     "\n",
-    "pass_wall = 0\n",
-    "\n",
-    "have_to_visit = deque()\n",
-    "have_to_visit.append((0, 0, 1, pass_wall))\n",
-    "visited[0][0][0] = True\n",
-    "\n",
-    "print(bfs())"
+    "for i in range(n):\n",
+    "    for j in range(m):\n",
+    "        a = bfs(nums, i, j)\n",
+    "        b = t_boundary(nums, i, j)\n",
+    "        \n",
+    "        max_weight = max(max_weight, a, b)\n",
+    "            \n",
+    "print(max_weight)"
    ]
   },
   {
@@ -180,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
