--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -66,87 +66,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "19\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0],\n",
+       " [0, 0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from collections import deque\n",
-    "\n",
-    "def bfs(nums, x, y):\n",
-    "    visited = set()\n",
-    "    have_to_visit = deque()\n",
-    "    max_weight = 0\n",
+    "def count_chicken(maps, m):\n",
+    "    chickens = []\n",
     "    \n",
-    "    dx = [-1, 1, 0, 0]\n",
-    "    dy = [0, 0, -1, 1]\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if maps[i][j] == m:\n",
+    "                chickens.append([i, j])\n",
+    "                \n",
+    "    return chickens\n",
+    "\n",
+    "def get_distance(maps, chickens):\n",
+    "    dp = [[0 for _ in range(n)] for _ in range(n)]\n",
     "    \n",
-    "    visited.add((x, y))\n",
-    "    have_to_visit.append((x, y, nums[x][y], 1, visited))\n",
     "    \n",
-    "    while have_to_visit:\n",
-    "        x, y, weight, count, _visited = have_to_visit.popleft()\n",
-    "        \n",
-    "        if count == 4:\n",
-    "            if weight > max_weight:\n",
-    "                max_weight = weight\n",
-    "            continue\n",
-    "        \n",
-    "        for i in range(4):\n",
-    "            nx = x + dx[i]\n",
-    "            ny = y + dy[i]\n",
-    "            \n",
-    "            if 0 <= nx < n and 0 <= ny < m and (nx, ny) not in _visited:\n",
-    "                _visited.add((nx, ny))\n",
-    "                have_to_visit.append((nx, ny, weight + nums[nx][ny], count + 1, _visited))\n",
-    "    \n",
-    "    return max_weight\n",
     "\n",
-    "def t_boundary(nums, x, y):\n",
-    "    max_weight = 0\n",
-    "        \n",
-    "    dx = [-1, 1, 0, 0]\n",
-    "    dy = [0, 0, -1, 1]\n",
+    "# n, m = map(int, input().split()) \n",
+    "# cases = [list(map(int, input().split())) for _ in range(n)]\n",
     "\n",
-    "    for omit in range(4):\n",
-    "        total = nums[x][y]\n",
-    "        for d in range(4):\n",
-    "            if d == omit:\n",
-    "                continue\n",
-    "            nx = x + dx[d]\n",
-    "            ny = y + dy[d]\n",
+    "n, m = 5, 3\n",
+    "maps = [\n",
+    "    [0, 0, 1, 0, 0],\n",
+    "    [0, 0, 2, 0, 1],\n",
+    "    [0, 1, 2, 0, 0],\n",
+    "    [0, 0, 1, 0, 0],\n",
+    "    [0, 0, 0, 0, 2]\n",
+    "]\n",
     "\n",
-    "            if not (0 <= nx < n and 0 <= ny < m):\n",
-    "                break\n",
-    "            \n",
-    "            total += nums[nx][ny]\n",
-    "            \n",
-    "    if max_weight < total:\n",
-    "        max_weight = total\n",
-    "    \n",
-    "    return max_weight\n",
-    "\n",
-    "\n",
-    "n, m = map(int, input().split())\n",
-    "nums = [list(map(int, input().split())) for _ in range(n)]\n",
-    "\n",
-    "max_weight = 0\n",
-    "\n",
-    "for i in range(n):\n",
-    "    for j in range(m):\n",
-    "        a = bfs(nums, i, j)\n",
-    "        b = t_boundary(nums, i, j)\n",
-    "        \n",
-    "        max_weight = max(max_weight, a, b)\n",
-    "            \n",
-    "print(max_weight)"
+    "if len(count_chicken(maps, m)) == m:\n",
+    "    pass\n",
+    "\n"
    ]
   },
   {
@@ -154,43 +122,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import sys\n",
-    "from collections import defaultdict\n",
-    "\n",
-    "input = sys.stdin.readline\n",
-    "\n",
-    "n = int(input())\n",
-    "tree = [input().split() for _ in range(n)]\n",
-    "\n",
-    "dict_tree = defaultdict(list)\n",
-    "for parent, left, right in tree:\n",
-    "    dict_tree[parent] = [left, right]\n",
-    "\n",
-    "def preorder(root):\n",
-    "    if root != '.':\n",
-    "        print(root, end='')          \n",
-    "        preorder(dict_tree[root][0])  \n",
-    "        preorder(dict_tree[root][1]) \n",
-    "\n",
-    "def inorder(root):\n",
-    "    if root != '.':\n",
-    "        inorder(dict_tree[root][0])\n",
-    "        print(root, end='')         \n",
-    "        inorder(dict_tree[root][1]) \n",
-    "\n",
-    "def postorder(root):\n",
-    "    if root != '.':\n",
-    "        postorder(dict_tree[root][0])\n",
-    "        postorder(dict_tree[root][1])\n",
-    "        print(root, end='')  \n",
-    "\n",
-    "preorder('A')\n",
-    "print()\n",
-    "inorder('A')\n",
-    "print()\n",
-    "postorder('A')\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -209,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
