--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -66,55 +66,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0]]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 1, 2, 3, 2, 3, 3, 2, 3]\n"
+     ]
     }
    ],
    "source": [
-    "def count_chicken(maps, m):\n",
-    "    chickens = []\n",
+    "# backjoon\n",
+    "num = 10\n",
+    "dp = [0] * (num + 1)\n",
+    "\n",
+    "for i in range(2, num+1):\n",
+    "    dp[i] = dp[i-1] + 1\n",
     "    \n",
-    "    for i in range(n):\n",
-    "        for j in range(n):\n",
-    "            if maps[i][j] == m:\n",
-    "                chickens.append([i, j])\n",
-    "                \n",
-    "    return chickens\n",
-    "\n",
-    "def get_distance(maps, chickens):\n",
-    "    dp = [[0 for _ in range(n)] for _ in range(n)]\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "# n, m = map(int, input().split()) \n",
-    "# cases = [list(map(int, input().split())) for _ in range(n)]\n",
-    "\n",
-    "n, m = 5, 3\n",
-    "maps = [\n",
-    "    [0, 0, 1, 0, 0],\n",
-    "    [0, 0, 2, 0, 1],\n",
-    "    [0, 1, 2, 0, 0],\n",
-    "    [0, 0, 1, 0, 0],\n",
-    "    [0, 0, 0, 0, 2]\n",
-    "]\n",
-    "\n",
-    "if len(count_chicken(maps, m)) == m:\n",
-    "    pass\n",
-    "\n"
+    "    if i % 2 == 0:\n",
+    "        dp[i] = min(dp[i], dp[i // 2] + 1)\n",
+    "    if i % 3 == 0:    \n",
+    "        dp[i] = min(dp[i], dp[i // 3] + 1)\n",
+    "        \n",
+    "print(dp)"
    ]
   },
   {
