--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -66,32 +66,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 1, 1, 2, 3, 2, 3, 3, 2, 3]\n"
+      "[[0, 0, 6, 0, 10, 23, 32], [0, 6, 0, 10, 23, 32, 40], [0, 0, 10, 23, 32, 40, 41]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "\n",
+    "wines = [0] * n\n",
+    "for i in range(n):\n",
+    "    wines[i] = int(input())\n",
+    "\n",
+    "dp = [[0]*3 for _ in range(n+1)]\n",
+    "\n",
+    "dp[1][0] = 0\n",
+    "dp[1][1] = wines[0]   # drink glass 1, no previous\n",
+    "dp[1][2] = 0          # cannot have two in a row yet\n",
+    "\n",
+    "for i in range(2, n+1):\n",
+    "    w = wines[i-1]\n",
+    "    \n",
+    "    dp[i][0] = max(dp[i-1])        \n",
+    "    dp[i][1] = dp[i-1][0] + w     \n",
+    "    dp[i][2] = dp[i-1][1] + w           \n",
+    "\n",
+    "print( max(dp[n]) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0]\n",
+      "[0, 0, 0]\n",
+      "[0, 6, 6]\n",
+      "[6, 10, 16]\n",
+      "[16, 19, 23]\n",
+      "[23, 25, 28]\n",
+      "[28, 31, 33]\n"
      ]
     }
    ],
    "source": [
     "# backjoon\n",
-    "num = 10\n",
-    "dp = [0] * (num + 1)\n",
+    "import sys\n",
     "\n",
-    "for i in range(2, num+1):\n",
-    "    dp[i] = dp[i-1] + 1\n",
-    "    \n",
-    "    if i % 2 == 0:\n",
-    "        dp[i] = min(dp[i], dp[i // 2] + 1)\n",
-    "    if i % 3 == 0:    \n",
-    "        dp[i] = min(dp[i], dp[i // 3] + 1)\n",
-    "        \n",
-    "print(dp)"
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "steps = []\n",
+    "for i in range(1, n+1):\n",
+    "    steps.append(int(input()))\n",
+    "\n",
+    "dp = [[0, 0] for _ in range(n+1)]\n",
+    "\n",
+    "dp[0] = [0, 0]\n",
+    "dp[1] = [steps[0], 0]\n",
+    "\n",
+    "for i in range(2, n+1):\n",
+    "    dp[i][0] = max(dp[i-2][0], dp[i-2][1])  + steps[i-1]\n",
+    "    dp[i][1] = dp[i-1][0] + steps[i-1]\n",
+    "\n",
+    "print(max(dp[-1]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0]\n",
+      "[0, 0, 0]\n",
+      "[0, 6, 6]\n",
+      "[6, 10, 16]\n",
+      "[16, 19, 23]\n",
+      "[23, 25, 28]\n",
+      "[28, 31, 33]\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
