--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -102,73 +102,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0]\n",
-      "[0, 0, 0]\n",
-      "[0, 6, 6]\n",
-      "[6, 10, 16]\n",
-      "[16, 19, 23]\n",
-      "[23, 25, 28]\n",
-      "[28, 31, 33]\n"
+      "1\n",
+      "2\n",
+      "4\n",
+      "3\n",
+      "0\n"
      ]
     }
    ],
    "source": [
-    "# backjoon\n",
     "import sys\n",
+    "from collections import defaultdict, deque\n",
     "\n",
     "input = sys.stdin.readline\n",
+    "n, m, start = map(int, input().split())\n",
     "\n",
-    "n = int(input())\n",
-    "steps = []\n",
+    "dist = defaultdict(list)\n",
+    "\n",
+    "for _ in range(m):\n",
+    "    u, v = map(int, input().split())\n",
+    "    dist[u].append(v)\n",
+    "    dist[v].append(u)\n",
     "for i in range(1, n+1):\n",
-    "    steps.append(int(input()))\n",
+    "    dist[i].sort()\n",
     "\n",
-    "dp = [[0, 0] for _ in range(n+1)]\n",
+    "visited = [0] * (n+1)\n",
+    "order = 1\n",
+    "    \n",
+    "def bfs(s):\n",
+    "    global order\n",
+    "    visited[s] = order\n",
+    "    have_to_visit = deque()\n",
+    "    have_to_visit.append(s)\n",
+    "    order += 1\n",
+    "    \n",
+    "    while have_to_visit:\n",
+    "        node = have_to_visit.popleft()\n",
+    "        for neighbor in dist[node]:\n",
+    "            if visited[neighbor] == 0:\n",
+    "                visited[neighbor] = order\n",
+    "                order += 1\n",
+    "                have_to_visit.append(neighbor)\n",
+    "            \n",
+    "bfs(start)\n",
     "\n",
-    "dp[0] = [0, 0]\n",
-    "dp[1] = [steps[0], 0]\n",
-    "\n",
-    "for i in range(2, n+1):\n",
-    "    dp[i][0] = max(dp[i-2][0], dp[i-2][1])  + steps[i-1]\n",
-    "    dp[i][1] = dp[i-1][0] + steps[i-1]\n",
-    "\n",
-    "print(max(dp[-1]))"
+    "for i in range(1, n+1):\n",
+    "    print(visited[i])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 0]\n",
-      "[0, 0, 0]\n",
-      "[0, 6, 6]\n",
-      "[6, 10, 16]\n",
-      "[16, 19, 23]\n",
-      "[23, 25, 28]\n",
-      "[28, 31, 33]\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "import heapq\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "v, e = map(int, input().split())\n",
+    "k = int(input())\n",
+    "\n",
+    "graph = [[] for _ in range(v+1)]\n",
+    "for _ in range(e):\n",
+    "    start, end, weight = map(int, input().split())\n",
+    "    graph[start].append((end, weight))\n",
+    "\n",
+    "def dijkstra(graph, start, num_nodes):\n",
+    "    dist = {node: float('inf') for node in range(1, num_nodes+1)}\n",
+    "    dist[start] = 0\n",
+    "\n",
+    "    pq = [(0, start)]\n",
+    "    \n",
+    "    while pq:\n",
+    "        cur_d, u = heapq.heappop(pq)\n",
+    "        if cur_d > dist[u]:\n",
+    "            continue\n",
+    "        for v, weight in graph[u]:\n",
+    "            new_d = cur_d + weight\n",
+    "            if new_d < dist[v]:\n",
+    "                dist[v] = new_d\n",
+    "                heapq.heappush(pq, (new_d, v))\n",
+    "\n",
+    "    return dist\n",
+    "\n",
+    "shortest_paths = dijkstra(graph, k, v)\n",
+    "\n",
+    "for node in range(1, v+1):\n",
+    "    distance = shortest_paths[node]\n",
+    "    print(distance if distance < float('inf') else \"INF\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0], [10, 0], [20, 30], [25, 35], [55, 50], [45, 65], [75, 65]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "v, e = map(int, input().split())\n",
+    "\n",
+    "edges = []\n",
+    "\n",
+    "INF = float('inf')\n",
+    "dist = [INF] * (v + 1)\n",
+    "\n",
+    "for _ in range(e):\n",
+    "    start, end, cost = map(int, input().split())\n",
+    "    edges.append((start, end, cost))\n",
+    "    \n",
+    "def bellmanford(start):\n",
+    "    dist[start] = 0\n",
+    "    \n",
+    "    for i in range(v):\n",
+    "        for j in range(e):\n",
+    "            cur_node, next_node, cost = edges[j]\n",
+    "            \n",
+    "            # 갈 수 있는 경로가 존재하고 현재까지 온 경로 비용 + 가야할 비용이 더 작다면\n",
+    "            if dist[cur_node] != INF and dist[cur_node] + cost < dist[next_node]:\n",
+    "                dist[next_node] = dist[cur_node] + cost\n",
+    "                \n",
+    "                # 계속 갱신된다면 음의 사이클 존재\n",
+    "                if i == v-1:\n",
+    "                    return False\n",
+    "                \n",
+    "    return True\n",
+    "\n",
+    "if bellmanford(1):\n",
+    "    for i in range(2, v+1):\n",
+    "        if dist[i] == INF:\n",
+    "            print(-1)\n",
+    "        else:\n",
+    "            print(dist[i])\n",
+    "else:\n",
+    "    print(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "m = int(input())\n",
+    "\n",
+    "INF = float('inf')\n",
+    "dist = [[INF] * n for _ in range(n)]\n",
+    "for i in range(n):\n",
+    "    dist[i][i] = 0\n",
+    "\n",
+    "for _ in range(m):\n",
+    "    start, end, weight = map(int, input().split())\n",
+    "    if weight < dist[start - 1][end - 1]:\n",
+    "        dist[start - 1][end - 1] = weight\n",
+    "\n",
+    "# Floyd-Warshall\n",
+    "for k in range(n):\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            dist[i][j] = min(dist[i][j], dist[i][k] + dist[k][j])\n",
+    "\n",
+    "for i in range(n):\n",
+    "    for j in range(n):\n",
+    "        if dist[i][j] == INF:\n",
+    "            print(0, end=' ')\n",
+    "        else:\n",
+    "            print(dist[i][j], end=' ')\n",
+    "    print()\n"
+   ]
   }
  ],
  "metadata": {
