--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -102,6 +102,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# target = 7\n",
+    "# trees = [20, 15, 10, 17]\n",
+    "\n",
+    "mans = [3, 1, 4, 3, 2]\n",
+    "mans.sort()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -135,26 +148,25 @@
     "\n",
     "visited = [0] * (n+1)\n",
     "order = 1\n",
-    "    \n",
-    "def bfs(s):\n",
+    "\n",
+    "def dfs(start):\n",
     "    global order\n",
-    "    visited[s] = order\n",
-    "    have_to_visit = deque()\n",
-    "    have_to_visit.append(s)\n",
-    "    order += 1\n",
-    "    \n",
-    "    while have_to_visit:\n",
-    "        node = have_to_visit.popleft()\n",
-    "        for neighbor in dist[node]:\n",
+    "    stack = [start]\n",
+    "\n",
+    "    while stack:\n",
+    "        node = stack.pop()\n",
+    "        if visited[node] != 0:\n",
+    "            continue\n",
+    "        visited[node] = order\n",
+    "        order += 1\n",
+    "        for neighbor in reversed(dist[node]):\n",
     "            if visited[neighbor] == 0:\n",
-    "                visited[neighbor] = order\n",
-    "                order += 1\n",
-    "                have_to_visit.append(neighbor)\n",
-    "            \n",
-    "bfs(start)\n",
+    "                stack.append(neighbor)\n",
+    "\n",
+    "dfs(start)\n",
     "\n",
     "for i in range(1, n+1):\n",
-    "    print(visited[i])"
+    "    print(visited[i])\n"
    ]
   },
   {
