--- a/딥러닝/my_RAG.ipynb
+++ b/딥러닝/my_RAG.ipynb
@@ -14,61 +14,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6b2b481b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Data Loader - 웹페이지 데이터 가져오기\n",
-    "# from langchain_community.document_loaders import WebBaseLoader\n",
-    "\n",
-    "# url = 'https://ko.wikipedia.org/wiki/%EC%9C%84%ED%82%A4%EB%B0%B1%EA%B3%BC:%EC%A0%95%EC%B1%85%EA%B3%BC_%EC%A7%80%EC%B9%A8'\n",
-    "# loader = WebBaseLoader(url)\n",
-    "\n",
-    "# docs = loader.load()\n",
-    "\n",
-    "# print(len(docs))\n",
-    "# print(len(docs[0].page_content))\n",
-    "# print(docs[0].page_content[5000:6000])\n",
-    "\n",
-    "\n",
-    "# # ---------------------------------------------------------------------------------------\n",
-    "\n",
-    "\n",
-    "# # Text Split (Documents -> small chunks: Documents)\n",
-    "# from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "\n",
-    "# text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
-    "# splits = text_splitter.split_documents(docs)\n",
-    "\n",
-    "# print(len(splits))\n",
-    "# print(splits[0].page_content)\n",
-    "# print(splits[0].metadata)\n",
-    "\n",
-    "\n",
-    "# # ---------------------------------------------------------------------------------------\n",
-    "\n",
-    "\n",
-    "# # Indexing (Texts -> Embedding -> Store)\n",
-    "# from langchain_community.vectorstores import Chroma\n",
-    "# from langchain_community.embeddings import HuggingFaceEmbeddings\n",
-    "\n",
-    "# embeddings_model = HuggingFaceEmbeddings(\n",
-    "#     model_name='jhgan/ko-sroberta-nli',\n",
-    "#     model_kwargs={'device':device},\n",
-    "#     encode_kwargs={'normalize_embeddings':True},\n",
-    "# )\n",
-    "\n",
-    "# vectorstore = Chroma.from_documents(documents=splits,\n",
-    "#                                     embedding=embeddings_model)\n",
-    "\n",
-    "# docs = vectorstore.similarity_search(\"격하 과정에 대해서 설명해주세요.\")\n",
-    "# print(len(docs))\n",
-    "# print(docs[0].page_content)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
    "id": "b2f51608",
    "metadata": {},
    "outputs": [],
@@ -187,15 +132,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\minja\\AppData\\Local\\Temp\\ipykernel_8508\\115859068.py:11: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "C:\\Users\\minja\\AppData\\Local\\Temp\\ipykernel_5640\\628061918.py:8: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
       "  embedding_model = HuggingFaceEmbeddings(\n"
      ]
     }
    ],
    "source": [
-    "# PDF를 마크다운 형식으로 변환 (페이지별 청크 포함)\n",
-    "md_text = pymupdf4llm.to_markdown(pdf_filepath)\n",
-    "\n",
     "# 2. 마크다운 → 텍스트 청크 분할\n",
     "splitter = MarkdownTextSplitter(chunk_size=1000, chunk_overlap=50) #잘 안돼면 512, 768, 1024 등으로 변경\n",
     "chunks = splitter.create_documents([md_text])\n",
@@ -243,7 +185,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\minja\\AppData\\Local\\Temp\\ipykernel_8508\\4235443742.py:3: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
+      "C:\\Users\\minja\\AppData\\Local\\Temp\\ipykernel_5640\\4235443742.py:3: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
       "  llm = Ollama(model=\"gemma3:4b\")\n"
      ]
     }
@@ -280,7 +222,7 @@
     }
    ],
    "source": [
-    "question = \"공무형평상 부득이한 경우는?\"\n",
+    "question = \"미국은 해외 지역 중 '가' 지역이야?\"\n",
     "result = rag_chain.invoke(question)\n",
     "print(result)"
    ]
