--- a/딥러닝/my_RAG copy 2.ipynb
+++ b/딥러닝/my_RAG copy 2.ipynb
@@ -82,6 +82,56 @@
       "/opt/miniconda3/envs/rag/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "## 국내여비 지급기준(일부 발췌)\n",
+      "\n",
+      "| 구 분                                    | 운         | 운         | 임    | 임     | 일 비 (1일당)   | 숙박비 (1야당)   | 식 비 (1일당)   |\n",
+      "|------------------------------------------|------------|------------|-------|--------|-----------------|------------------|-----------------|\n",
+      "| 구 분                                    | 철 도      | 선 박      | 항 공 | 자동차 | 일 비 (1일당)   | 숙박비 (1야당)   | 식 비 (1일당)   |\n",
+      "| 교 수 부 교 수 5급(부참사) 이상 사무직원 | KTX (특실) | 2 등 정 액 | 〃    | 〃     | ￦30,000        | ￦100,000        | ￦40,000        |\n",
+      "| 조 교 수 전 임 강 사 일 반 직 원         | KTX (보통) | 〃         | 〃    | 〃     | ￦30,000        | ￦100,000        | ￦40,000        |\n",
+      "| 조 교 사무보조원 일 용 직                | KTX (보통) | 〃         | 〃    | 〃     | ￦20,000        | ￦80,000         | ￦30,000        |\n",
+      "\n",
+      "- 1. 고속철도 운행구간이 아닌 경우에는 새마을호 요금을 적용한다\n",
+      "- 2. KTX 및 철도를 이용할 수 없는 경우에는 고속버스(우등) 요금을 적용한다.\n",
+      "- 3. 운임 등이 할인되는 경우 할인요금을 지급한다.\n",
+      "- 4. 도서 및 벽지의 경우에는 실비 기준으로 지급할 수 있다.\n",
+      "- 5. 자가용 승용차를 이용하여 공무 및 연구활동을 수행하는 경우의 운임은 철도운임 또는 버스 운임으로 한다. 다만, 공무의 형편상 부득이한 사유로 자가용 승용차를 이용한 경우에는 연료 비 및 통행료 등을 지급할 수 있고 구체적인 지급기준은 별도로 정한다.\n",
+      "- 6. 워크숍, 세미나, 학회 등에 참석하기 위해 출장을 가는 경우 해당 주관기관에서 시행한 공 문 등에서 별표의 금액을 초과하는 숙박비 금액을 명시하거나 숙박기관을 지정한 때에는 그 금 액을 선지급하고 주관기관에서 시행한 참석확인 공문 또는 증빙서류 등을 제출한다 .\n",
+      "\n",
+      "## 공무형편상 부득이한 사유\n",
+      "\n",
+      "- ○ 산간오지, 도서벽지 등 대중교통수단이 없어 자가용을 이용할 수 밖에 없는 경우\n",
+      "- ○ 출장경로가 매우 복잡다양하여 대중교통을 사실상 이용할 수 없는 경우 ․\n",
+      "- ○ 공무목적상 부득이한 심야시간대 이동 또는 긴급한 사유가 있는 경우\n",
+      "- ○ 하중이 무거운 수하물을 운송해야 하는 경우 등\n",
+      "- ※ 근거리 지역구분\n",
+      "\n",
+      "| 현행 지역 구분    | 세부 지역 구분                                                          | 교통비(원)   |\n",
+      "|-------------------|-------------------------------------------------------------------------|--------------|\n",
+      "| 인천시내          | 강화군, 옹진군 및 도서지역 제외한 인천시내                              | 10,000       |\n",
+      "| 서울,안양,과천 외 | 서울,안양,과천,군포,의왕,안산,시흥,광명,부천,김포 外                    | 20,000       |\n",
+      "| 수원,분당,일산 외 | 수원,분당,일산,강화,영종도,화성 外(인천,서울 지역을 제외한 수도권 일원) | 25,000       |\n",
+      "\n",
+      "## 해외여비 지급기준(일부 발췌)\n",
+      "\n",
+      "|                                                              |    |                 | 재 비         | 재 비             | 재 비         |                                                                                              |\n",
+      "|--------------------------------------------------------------|----|-----------------|---------------|-------------------|---------------|----------------------------------------------------------------------------------------------|\n",
+      "| 구                                                           | 분 | 교 통 비        | 일 비 (1일당) | 체 숙박비 (1야당) | 식 비 (1일당) | 비 고                                                                                        |\n",
+      "| 교 수 부 교 수 부참여(3급) 이 상 조 교 수 전임강사 참사(4급) | 가 | 항공임 2등 운임 | 실비          | $35 $220          | $110          | 가 : 동경,뉴욕, 런던 파리,홍콩, LA, 모스크바,샌프란 시스코, 워싱턴 나 : '가'지역을 외한 지역 |\n",
+      "| 교 수 부 교 수 부참여(3급) 이 상 조 교 수 전임강사 참사(4급) | 나 | 〃              | 〃            | $35               | $160 $80      | 가 : 동경,뉴욕, 런던 파리,홍콩, LA, 모스크바,샌프란 시스코, 워싱턴 나 : '가'지역을 외한 지역 |\n",
+      "| 이 하                                                        | 가 | 항공임 3등      | 운임 실비     | $30               | $200 $85      | 가 : 동경,뉴욕, 런던 파리,홍콩, LA, 모스크바,샌프란 시스코, 워싱턴 나 : '가'지역을 외한 지역 |\n",
+      "| 이 하                                                        | 나 | 〃              | 〃            | $30               | $150 $60      | 가 : 동경,뉴욕, 런던 파리,홍콩, LA, 모스크바,샌프란 시스코, 워싱턴 나 : '가'지역을 외한 지역 |\n",
+      "\n",
+      "- 1. 같은 곳에 장기간 체재하는 경우의 일비 및 숙박비는 [---중략---] 감하여 지급한다.\n",
+      "- 2. 예산절감을 위해 필요한 경우 총장은 항공운임에 대해 별도의 기준을 정할수 있다.\n",
+      "- 3. '나'지역의 경우 공무의 형편이나 그 밖의 부득이한 사유로 상한액을 초과하여 숙박비를 지출하였을 때에는 '가'지역의 한도내에서 추가로 지급할 수 있다. 숙박비를 추가로 지급받 기 위해서는 영수증 및 세부사용 내역이 명시된 증빙을 갖추어 정산을 신청하여야 한다.\n",
+      "- 4. 워크숍, 세미나, 학회 등에 참석하기 위해 출장을 가는 경우 해당 주관기관에서 시행한 공문 등에서 별표의 금액을 초과하는 숙박비 금액을 명시하거나 숙박기관을 지정한 때에는 그 금액 을 선지급하고 주관기관에서 시행한 참석확인 공문 또는 증빙서류 등을 제출한다.\n"
+     ]
     }
    ],
    "source": [
@@ -104,7 +154,7 @@
     "doc = doc_converter.convert(input_pdf)\n",
     "\n",
     "markdown_text = doc.document.export_to_markdown()\n",
-    "# print(markdown_text)\n",
+    "print(markdown_text)\n",
     "#읽지 못하는 텍스트와 사진 처리방법 고민"
    ]
   },
@@ -207,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. table_chunks를 Document 형식으로 변환\n",
+    "# table_chunks를 Document 형식으로 변환\n",
     "table_documents = [\n",
     "    Document(\n",
     "        page_content=chunk[\"text\"],\n",
@@ -219,7 +269,7 @@
     "    ) for chunk in table_chunks\n",
     "]\n",
     "\n",
-    "# 3. 두 Document 리스트 합치기\n",
+    "# 두 Document 리스트 합치기\n",
     "all_documents = table_documents + text_documents"
    ]
   },
@@ -233,7 +283,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/f1/c1mlzgw562581ych5vk1w4tr0000gn/T/ipykernel_43121/3791966284.py:1: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "/var/folders/f1/c1mlzgw562581ych5vk1w4tr0000gn/T/ipykernel_46901/3791966284.py:1: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
       "  embedding_model = HuggingFaceEmbeddings(\n"
      ]
     }
@@ -267,7 +317,6 @@
     "# 모델 초기화\n",
     "model = HuggingFaceCrossEncoder(model_name=\"BAAI/bge-reranker-v2-m3\")\n",
     "\n",
-    "# 상위 3개의 문서 선택\n",
     "compressor = CrossEncoderReranker(model=model, top_n=8)\n",
     "\n",
     "# 문서 압축 검색기 초기화\n",
@@ -278,33 +327,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ea8afd3e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OpenAIError",
-     "evalue": "The api_key client option must be set either by passing api_key to the client or by setting the OPENAI_API_KEY environment variable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOpenAIError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 6\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlangchain_ollama\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m OllamaLLM\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# llm = OllamaLLM(model=\"llama3.2:3b\")\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# llm = OllamaLLM(model=\"deepseek-r1:1.5b\")\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# llm = OllamaLLM(model=\"gemma3:4b\")\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m llm \u001b[38;5;241m=\u001b[39m \u001b[43mChatOpenAI\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgpt-4o-mini\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtemperature\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mformat_docs\u001b[39m(docs):\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(doc\u001b[38;5;241m.\u001b[39mpage_content \u001b[38;5;28;01mfor\u001b[39;00m doc \u001b[38;5;129;01min\u001b[39;00m docs)\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/rag/lib/python3.9/site-packages/langchain_core/load/serializable.py:130\u001b[0m, in \u001b[0;36mSerializable.__init__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    128\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs: Any, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs: Any) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    129\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\"\"\"\u001b[39;00m  \u001b[38;5;66;03m# noqa: D419\u001b[39;00m\n\u001b[0;32m--> 130\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "    \u001b[0;31m[... skipping hidden 1 frame]\u001b[0m\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/rag/lib/python3.9/site-packages/langchain_openai/chat_models/base.py:642\u001b[0m, in \u001b[0;36mBaseChatOpenAI.validate_environment\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    635\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhttp_client \u001b[38;5;241m=\u001b[39m httpx\u001b[38;5;241m.\u001b[39mClient(\n\u001b[1;32m    636\u001b[0m             proxy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mopenai_proxy, verify\u001b[38;5;241m=\u001b[39mglobal_ssl_context\n\u001b[1;32m    637\u001b[0m         )\n\u001b[1;32m    638\u001b[0m     sync_specific \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m    639\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttp_client\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhttp_client\n\u001b[1;32m    640\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _get_default_httpx_client(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mopenai_api_base, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrequest_timeout)\n\u001b[1;32m    641\u001b[0m     }\n\u001b[0;32m--> 642\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mroot_client \u001b[38;5;241m=\u001b[39m \u001b[43mopenai\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mOpenAI\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mclient_params\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43msync_specific\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# type: ignore[arg-type]\u001b[39;00m\n\u001b[1;32m    643\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclient \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mroot_client\u001b[38;5;241m.\u001b[39mchat\u001b[38;5;241m.\u001b[39mcompletions\n\u001b[1;32m    644\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39masync_client:\n",
-      "File \u001b[0;32m/opt/miniconda3/envs/rag/lib/python3.9/site-packages/openai/_client.py:126\u001b[0m, in \u001b[0;36mOpenAI.__init__\u001b[0;34m(self, api_key, organization, project, base_url, websocket_base_url, timeout, max_retries, default_headers, default_query, http_client, _strict_response_validation)\u001b[0m\n\u001b[1;32m    124\u001b[0m     api_key \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39menviron\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOPENAI_API_KEY\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    125\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m api_key \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 126\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m OpenAIError(\n\u001b[1;32m    127\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe api_key client option must be set either by passing api_key to the client or by setting the OPENAI_API_KEY environment variable\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    128\u001b[0m     )\n\u001b[1;32m    129\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mapi_key \u001b[38;5;241m=\u001b[39m api_key\n\u001b[1;32m    131\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m organization \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "\u001b[0;31mOpenAIError\u001b[0m: The api_key client option must be set either by passing api_key to the client or by setting the OPENAI_API_KEY environment variable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_ollama import OllamaLLM\n",
     "\n",
     "# llm = OllamaLLM(model=\"llama3.2:3b\")\n",
     "# llm = OllamaLLM(model=\"deepseek-r1:1.5b\")\n",
-    "# llm = OllamaLLM(model=\"gemma3:4b\")\n",
-    "llm = ChatOpenAI(model_name = \"gpt-4o-mini\", temperature=0)\n",
+    "llm = OllamaLLM(model=\"gemma3:4b\")\n",
+    "# llm = ChatOpenAI(model_name = \"gpt-4o-mini\", temperature=0)\n",
     "\n",
     "def format_docs(docs):\n",
     "    return '\\n\\n'.join(doc.page_content for doc in docs)\n",
@@ -335,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "83e1df72",
    "metadata": {},
    "outputs": [
@@ -343,7 +376,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "관련 정보를 찾을 수 없습니다.\n"
+      "교수가 미국으로 4일 출장을 다녀오면 숙박비는 $35(1일당) x 4일 = $140를 선지급받을 수 있습니다.\n"
      ]
     }
    ],
@@ -359,7 +392,11 @@
    "id": "73e76a94",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 출처 기능까지 지원하는지?\n",
+    "\n",
+    "# restapi"
+   ]
   }
  ],
  "metadata": {
